--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,14 @@
 @tailwind utilities;
 
 @layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
+@layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
@@ -72,4 +80,12 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+::-webkit-calendar-picker-indicator {
+  cursor: pointer;
+}
+
+div.k_error [data-validate] {
+  border-color: rgb(239 68 68 / 1);
 }
