Svelte 5 changes in component, added font, etc

--- a/src/app.css
+++ b/src/app.css
@@ -82,6 +82,16 @@
   }
 }
 
+@layer base {
+  @font-face {
+    font-family: 'Nunito';
+		src: local('Nunito'), local('nunito'),
+			url('/fonts/Nunito/Nunito-VariableFont_wght.ttf');
+		font-weight: normal;
+		font-display: swap;
+  }
+}
+
 ::-webkit-calendar-picker-indicator {
   cursor: pointer;
 }
